--- a/views/components/list.ejs
+++ b/views/components/list.ejs
@@ -1,8 +1,6 @@
-
-            <% for(let list of lists){ %> 
-            <div class="img-wp">
-                <img src="/img/<%= list.src %> " alt="pf" class="w100">
-            </div>
-            <div class="title"><%= list.title %> </div>
-        </div>
-        <% } %> 
+<div class="pf">
+	<div class="img-wp">
+		<img src="/img/<%= list.src %>" alt="pf" class="w100">
+	</div>
+	<div class="title"><%= list.title %> </div>
+</div>
