--- a/views/inc/title-bar.ejs
+++ b/views/inc/title-bar.ejs
@@ -1,4 +1,4 @@
 <style>
-    h2.title-bar {font-size: 1.5em; color: darkslategray; margin-bottom: .5em;}
+	h2.title-bar {font-size: 1.5em; color:darkslategrey; margin-bottom: .5em;}
 </style>
-<h2 class="title-bar"><%= title %> </h2> 
+<h2 class="title-bar"><%= title %> </h2>
