--- a/views2/layout/sample-layout.pug
+++ b/views2/layout/sample-layout.pug
@@ -18,6 +18,6 @@ html(lang='ko')
 			.wrapper
 				include ../inc/navi
 				block content
-				block recent 
-					.recent
+				.recent-wrap
+					block recent 
 				include ../inc/footer
