--- a/views2/site/pf.pug
+++ b/views2/site/pf.pug
@@ -1,6 +1,6 @@
 extends ../layout/sample-layout
 
-include ../mixins/list
+//- include ../mixins/list
 
 
 block content
@@ -8,4 +8,4 @@ block content
         include ../inc/title-bar
         .pf-wrap
             each list in lists
-                +list(list)
+                include ../components/list
